# AltSnap

./: CMakeLists.txt  hooks.def
.trash/: Makefile  MakefileClang  MakefileClangdb  MakefileTCC  MakefileX64  Makefiledb  makerelease.bat  mk.bat  mk64.bat  mkvcc6.bat  nsi.bat  oldmk64.bat  sch_Off.bat  sch_On.bat  ziprelease.bat  zzip.bat
Lang/: _en_US baseline.txt  de_DE.ini  fi_FI.ini  fr_FR.ini  it_IT.ini  ko_KR.ini  pl_PL.ini  tr_TR.ini  uk_UA.ini
